RecipeBookActivity working - Clicking on FAB opens RecipeBookDetailsDialog to add details for the recipe book - Clicking on a specific recipe book now launches the ChapterActivity - CursorLoader properly loads Cursor and passes it to the RecipeBookAdapter
Added "My Recipe Books" option to the Navigation Drawer in RecipeListActivity for launching the RecipeBookActivity

--- a/app/src/main/res/layout/fragment_chapter.xml
+++ b/app/src/main/res/layout/fragment_chapter.xml
@@ -4,7 +4,7 @@
     android:id="@+id/content_chapter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.hnoct.kitchen.ui.ChapterActivityFragment"
+    tools:context="project.hnoct.kitchen.ui.ChapterFragment"
     tools:showIn="@layout/activity_chapter">
 
     <android.support.v7.widget.RecyclerView
