--- a/app/src/main/res/layout/activity_recipe_book.xml
+++ b/app/src/main/res/layout/activity_recipe_book.xml
@@ -24,7 +24,7 @@
     <include layout="@layout/content_recipe_book" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/recipe_book_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
