--- a/app/src/main/res/layout/content_chapter.xml
+++ b/app/src/main/res/layout/content_chapter.xml
@@ -1,8 +1,8 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="project.hnoct.kitchen.ui.ChapterActivityFragment"
+    android:id="@+id/chapter_container"
+    android:name="project.hnoct.kitchen.ui.ChapterFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
