ChapterActivity functional - Chapters are added through the FAB - Specific recipes can added to any Chapter
Created AddRecipeDialog for allowing a selection of a recipe to be added to a chapter

Created ChapterDetailsDialog for entering the information of a chapter to be created
- TODO: Allow modification of existing chapters

ChapterAdapter mostly complete
- Displays all the recipes of a chapter with an embedded RecyclerView
- Cursors are managed by CursorManager
- TODO: Ensure Cursors are sycned to Activity lifecycle
- Selecting a recipe will open the RecipeDetailsActivity

Various small updates and tweaks
- Added column projection and index to ChapterEntry
- Added foreign key to recipe_book_id in chapters table to keep track of which recipe book has which chapters
- Fixed bug in RecipeProvider where queries to the RecipeBookLink table would not queried the joined tables
- Fixed bug where querying the RecipeBookLink table with the recipe book ID and chapter ID would fail
- Modified RecipeAdapter so that a FragmentManager is only required when recipes details are required
- Fixed bug in RecipeBookAdapter where all images were being displayed instead of only the first recipe of each chapter

--- a/app/src/main/res/layout/dialog_chapter_details.xml
+++ b/app/src/main/res/layout/dialog_chapter_details.xml
@@ -7,15 +7,17 @@
     android:padding="@dimen/activity_vertical_margin">
 
     <EditText
-        android:id="@+id/dialog_recipebook_title_edit_text"
+        android:id="@+id/dialog_chapter_title_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/dialog_recipebook_details_title"/>
+        android:inputType="textAutoCorrect|textCapWords"
+        android:hint="@string/dialog_chapter_details_title"/>
 
     <EditText
-        android:id="@+id/dialog_recipebook_description_edit_text"
+        android:id="@+id/dialog_chapter_description_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/dialog_recipebook_details_description"/>
+        android:inputType="textAutoCorrect|textCapSentences"
+        android:hint="@string/dialog_chapter_details_description"/>
 
 </LinearLayout>
