--- a/app/src/main/res/layout/list_item_chapter.xml
+++ b/app/src/main/res/layout/list_item_chapter.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="@dimen/default_list_item_vertical_separation">
+    android:layout_marginTop="@dimen/default_list_item_vertical_separation"
+    >
 
     <TextView
         android:id="@+id/list_chapter_title"
@@ -34,5 +35,25 @@
         android:layout_height="wrap_content">
 
     </project.hnoct.kitchen.ui.NonScrollingRecyclerView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/list_chapter_add_recipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/card_vertical_padding"
+        android:layout_marginRight="@dimen/card_horizontal_margin"
+        android:layout_marginLeft="@dimen/card_horizontal_margin"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        app:contentPaddingBottom="@dimen/card_vertical_padding"
+        app:cardCornerRadius="@dimen/card_corner_radius">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="@dimen/card_vertical_padding"
+            android:src="@drawable/ic_menu_add_custom"/>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
