--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,14 +15,21 @@
 
     <item
         android:id="@+id/action_my_recipes"
+        android:orderInCategory="3"
         android:title="@string/my_recipes_title" />
 
     <item
         android:id="@+id/action_my_recipe_books"
+        android:orderInCategory="4"
         android:title="@string/recipe_book_title" />
+
+    <item
+        android:id="@+id/action_copy_db"
+        android:orderInCategory="5"
+        android:title="@string/transfer_db_title" />
 
     <item
         android:id="@+id/action_clear_data"
         android:title="@string/action_clear_data"
-        android:orderInCategory="2"/>
+        android:orderInCategory="99"/>
 </menu>
