--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -8,7 +8,6 @@
     android:layout_marginTop="@dimen/card_vertical_padding"
     android:layout_marginRight="@dimen/card_horizontal_margin"
     android:layout_marginLeft="@dimen/card_horizontal_margin"
-    app:contentPaddingBottom="@dimen/card_vertical_padding"
     app:cardCornerRadius="@dimen/card_corner_radius"
     >
 
@@ -53,6 +52,7 @@
         android:layout_marginTop="@dimen/card_thumbnail_height_single"
         android:layout_marginLeft="@dimen/card_text_horizontal_margin"
         android:layout_marginRight="@dimen/card_text_horizontal_margin"
+        android:layout_marginBottom="@dimen/card_vertical_padding"
         app:columnCount="2">
 
         <TextView
@@ -97,6 +97,13 @@
             tools:text="4.9\u2605" />
 
     </android.support.v7.widget.GridLayout>
+
+    <FrameLayout
+        android:id="@+id/list_recipe_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@drawable/user_card_overlay"/>
 
 </android.support.v7.widget.CardView>
 <!-- TODO -->
