Added ability to modify recipes within ChapterActivity - Added button enter edit mode in which the embedded RecipeAdapters switch to a compact view - In edit mode, recipes can be re-arranged by using the drag handle and removed by swiping - Database is correctly updated to reflect the user-changes
Modified RecipeAdapter
- When Cursor is swapped in, it creates an ArrayList containing all the values of the Cursor so that it can be modified during re-arrange/removal
- Added compact view layout for when user enters edit mode

Updated RecipeDetailsFragment
- Checks if attached to Activity prior to restarting the CursorLoader to prevent crashes if user exits before recipe is finished importing

--- a/app/src/main/res/layout/fragment_create_recipe.xml
+++ b/app/src/main/res/layout/fragment_create_recipe.xml
@@ -92,7 +92,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             style="@style/subtitleText" />
 
-        <project.hnoct.kitchen.ui.NonScrollingRecyclerView
+        <project.hnoct.kitchen.view.NonScrollingRecyclerView
             android:id="@+id/create_recipe_ingredient_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
             android:gravity="center_vertical">
 
             <ImageView
-                android:layout_width="@dimen/list_add_direction_button_size"
+                android:layout_width="@dimen/touchpad_size"
                 android:layout_height="20dp"
                 android:src="@drawable/ic_menu_add_custom"
                 android:tint="@color/tertiary_grey_text"/>
@@ -131,7 +131,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             style="@style/subtitleText" />
 
-        <project.hnoct.kitchen.ui.NonScrollingRecyclerView
+        <project.hnoct.kitchen.view.NonScrollingRecyclerView
             android:id="@+id/create_recipe_direction_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -147,7 +147,7 @@
             android:gravity="center_vertical">
 
             <ImageView
-                android:layout_width="@dimen/list_add_direction_button_size"
+                android:layout_width="@dimen/touchpad_size"
                 android:layout_height="20dp"
                 android:src="@drawable/ic_menu_add_custom"
                 android:tint="@color/tertiary_grey_text"/>
