--- a/app/src/main/res/layout/list_item_chapter.xml
+++ b/app/src/main/res/layout/list_item_chapter.xml
@@ -29,21 +29,20 @@
         style="@style/descriptionText"
         tools:text="This is the first chapter of my book and it contains some decent recipes... I think."/>
 
-    <project.hnoct.kitchen.ui.NonScrollingRecyclerView
+    <project.hnoct.kitchen.view.NonScrollingRecyclerView
         android:id="@+id/list_chapter_recipe_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </project.hnoct.kitchen.ui.NonScrollingRecyclerView>
+    </project.hnoct.kitchen.view.NonScrollingRecyclerView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/list_chapter_add_recipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/card_vertical_padding"
+        android:layout_marginTop="@dimen/card_vertical_separation"
         android:layout_marginRight="@dimen/card_horizontal_margin"
         android:layout_marginLeft="@dimen/card_horizontal_margin"
-        android:layout_margin="@dimen/activity_vertical_margin"
         app:contentPaddingBottom="@dimen/card_vertical_padding"
         app:cardCornerRadius="@dimen/card_corner_radius">
 
