--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,8 @@
     <dimen name="card_horizontal_margin">16dp</dimen>
     <dimen name="card_text_horizontal_margin">8dp</dimen>
 
+    <dimen name="card_compact_vertical_separation">4dp</dimen>
+
     <!-- Ingredient list item -->
     <dimen name="list_ingredient_keyline">64dp</dimen>
     <dimen name="list_ingredient_min_height">24dp</dimen>
@@ -54,7 +56,7 @@
 
     <!-- Add Direction List Item -->
     <dimen name="list_add_direction_keyline">80dp</dimen>
-    <dimen name="list_add_direction_button_size">36dp</dimen>
+    <dimen name="touchpad_size">36dp</dimen>
     <dimen name="list_add_direction_button_top_margin">12dp</dimen>
     <dimen name="list_add_direction_button_margin">8dp</dimen>
 
