--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,12 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="titleTextCompact">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/primary_text_black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="descriptionText">
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/primary_text_black</item>
