Updated ChapterFragment for user-interaction - Added ability to change the order of the chapters while in edit-mode - Added drag-handles for moving chapters - Added SlidingAlphabeticalIndex for fast scrolling through chapters - Added ability to edit the title and description of the chapters while in edit-mode - Removed ability to add recipes while not in edit-mode - Database is edited utilizing an AsyncTask
Updated ChapterActivity so that back-button exits edit-mode first

Updated SlidingAlphabeticalIndex so that the index can be set individually

--- a/app/src/main/res/layout/fragment_create_recipe.xml
+++ b/app/src/main/res/layout/fragment_create_recipe.xml
@@ -27,11 +27,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|end|top"
-                android:padding="@dimen/list_add_direction_button_margin"
+                android:padding="@dimen/button_margin"
                 android:src="@drawable/ic_menu_close_clear_cancel"/>
         </FrameLayout>
-
-
 
         <LinearLayout
             android:id="@+id/content_create_recipe"
