--- a/app/src/main/res/layout/fragment_chapter.xml
+++ b/app/src/main/res/layout/fragment_chapter.xml
@@ -14,5 +14,14 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <project.hnoct.kitchen.view.SlidingAlphabeticalIndex
+        android:id="@+id/chapter_alphabetical_index"
+        android:layout_width="20dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        />
 
 </RelativeLayout>
