--- a/app/src/main/res/layout/list_item_add_direction.xml
+++ b/app/src/main/res/layout/list_item_add_direction.xml
@@ -12,7 +12,7 @@
         android:id="@+id/list_add_direction_touchpad"
         android:layout_width="@dimen/touchpad_size"
         android:layout_height="@dimen/touchpad_size"
-        android:padding="@dimen/list_add_direction_button_margin"
+        android:padding="@dimen/button_margin"
         android:tint="@color/tertiary_grey_text"
         android:src="@drawable/ic_touchpad_custom"
         />
