--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,4 +7,13 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
+    <style name="TransparentToolbar" parent="Widget.AppCompat.Light.ActionBar.Solid">
+        <item name="android:background">@null</item>
+        <item name="android:colorPrimary">@color/transparent_white</item>
+
+        <!-- Support library compatibility -->
+        <item name="background">@null</item>
+        <item name="colorPrimary">@color/transparent_white</item>
+    </style>
 </resources>
