--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="default_list_item_vertical_separation">16dp</dimen>
     <dimen name="default_text_vertical_padding">16dp</dimen>
     <dimen name="text_vertical_padding_small">8dp</dimen>
+    <dimen name="touchpad_size">36dp</dimen>
+    <dimen name="button_margin">8dp</dimen>
 
     <!-- Navigation Drawer -->
     <dimen name="navigation_drawer_width">200dp</dimen>
@@ -56,8 +58,7 @@
 
     <!-- Add Direction List Item -->
     <dimen name="list_add_direction_keyline">80dp</dimen>
-    <dimen name="touchpad_size">36dp</dimen>
     <dimen name="list_add_direction_button_top_margin">12dp</dimen>
-    <dimen name="list_add_direction_button_margin">8dp</dimen>
+
 
 </resources>
