--- a/app/src/main/res/layout/dialog_recyclerview.xml
+++ b/app/src/main/res/layout/dialog_recyclerview.xml
@@ -8,7 +8,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/dialog_add_recipe_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin">
 
     </android.support.v7.widget.RecyclerView>
 </android.support.v7.widget.CardView>
