--- a/app/src/main/res/layout/fragment_chapter.xml
+++ b/app/src/main/res/layout/fragment_chapter.xml
@@ -10,9 +10,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chapter_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content" />
 
     <project.hnoct.kitchen.view.SlidingAlphabeticalIndex
         android:id="@+id/chapter_alphabetical_index"
