Added Food.com as a new source - Created FoodDotComListAsyncTask for importing recipes from the website - Created FoodDotComAsyncTask for importing recipe details - Updated RecipeImporter and Utilities#buildUriMatcher to include Food.com URI
Massive change in database
- Updated recipe table to differentiate between the recipe ID used by the website and the apps internal recipe ID
- Updated ingredient table to allow for multiple ingredient IDs, one for each source
- Updated link ingredient table to utilize internal recipe ID as foreign key instead of website's recipe ID

Updated multiple functions in Utilities

--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -56,6 +56,7 @@
 
         <TextView
             android:id="@+id/list_recipe_description_text"
+            android:maxLines="8"
             android:paddingBottom="@dimen/default_text_vertical_padding"
             app:layout_columnSpan="2"
             tools:text="Simple fried chicken from Kentucky" />
