--- a/app/src/main/res/layout/fragment_create_recipe.xml
+++ b/app/src/main/res/layout/fragment_create_recipe.xml
@@ -38,7 +38,7 @@
             android:orientation="vertical"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            tools:context="project.hnoct.kitchen.ui.CreateRecipeFragment"
+            tools:context="project.hnoct.kitchen.ui.FragmentCreateRecipe"
             tools:showIn="@layout/activity_create_recipe">
 
             <EditText
