--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.hnoct.kitchen.ui.RecipeListActivity">
+    tools:context="project.hnoct.kitchen.ui.ActivityRecipeList">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/fragment"
-            android:name="project.hnoct.kitchen.ui.RecipeListFragment"
+            android:name="project.hnoct.kitchen.ui.FragmentRecipeList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
