--- a/app/src/main/res/layout/content_my_recipes.xml
+++ b/app/src/main/res/layout/content_my_recipes.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="project.hnoct.kitchen.ui.FragmentFavorites"
+    android:name="project.hnoct.kitchen.ui.FragmentMyRecipes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_favorites" />
+    tools:layout="@layout/fragment_my_recipes" />
