--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.hnoct.kitchen.ui.RecipeListFragment"
+    tools:context="project.hnoct.kitchen.ui.FragmentRecipeList"
     tools:showIn="@layout/activity_main">
 
     <android.support.v7.widget.RecyclerView
