--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/content_favorites"
+    android:id="@+id/content_my_recipes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.hnoct.kitchen.ui.FragmentFavorites"
-    tools:showIn="@layout/activity_favorites">
+    tools:context="project.hnoct.kitchen.ui.FragmentMyRecipes"
+    tools:showIn="@layout/activity_my_recipes">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/favorites_recyclerview"
+        android:id="@+id/my_recipes_recyclerview"
         android:paddingRight="4dp"
         android:paddingEnd="4dp"
         android:layout_width="match_parent"
@@ -23,12 +23,12 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/activity_horizontal_margin"
-        app:layout_anchor="@id/favorites_recyclerview"
+        app:layout_anchor="@id/my_recipes_recyclerview"
         app:layout_anchorGravity="fill"
         tools:text="Favorite a recipe to see it here!" />
 
     <project.hnoct.kitchen.view.SlidingAlphabeticalIndex
-        android:id="@+id/favorites_sliding_index"
+        android:id="@+id/my_recipes_sliding_index"
         android:layout_width="20dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
