--- a/app/src/main/res/menu/menu_recipe_details.xml
+++ b/app/src/main/res/menu/menu_recipe_details.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="project.hnoct.kitchen.ui.RecipeDetailsActivity">
+    tools:context="project.hnoct.kitchen.ui.ActivityRecipeDetails">
 </menu>
